# orekit-pip

./: .gitignore  README.md  generate.py  install-jdk.ipynb  pyproject.toml  requirements-generate.txt  setup.py  test.ipynb
test/: orekit-hello-world.py
