# pyproject.toml
[build-system]
requires = [
    "setuptools",
    "wheel",
    "jdk4py @ git+https://github.com/GorgiAstro/jdk4py/@test-pack-java-runtime",
    "jcc @ git+https://github.com/GorgiAstro/jcc/"
]
build-backend = "setuptools.build_meta"

[project]
name = "orekit"
version = "12.0"
dependencies = [
    "jdk4py @ git+https://github.com/GorgiAstro/jdk4py/@test-pack-java-runtime"
]