# pyproject.toml
[build-system]
requires = [
    "setuptools",
    "wheel",
    "jcchelpers @ git+https://github.com/GorgiAstro/jcchelpers",
    "jcc @ git+https://github.com/GorgiAstro/jcc/",
]
build-backend = "setuptools.build_meta"

[project]
name = "orekit"
version = "12.0.1.2" # Follows https://github.com/petrushy/orekit_python_artifacts/releases/tag/v12_0_1_2
dependencies = [
    "jcchelpers @ git+https://github.com/GorgiAstro/jcchelpers",
]